--- a/index.html
+++ b/index.html
@@ -44,7 +44,6 @@
                                 <p><span> <a href="tel:0733553052">07 3355 3052 </a></span><br>Call Between 7am-8pm
                                 </p>
                             </div>
-
                             <div class="header-account">
                                 <img src="./images/accountlogo.png" alt="accountlogo">
                                 <div class="dropdown">
@@ -58,29 +57,34 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="navbar-copy-navbar">
-                                <!-- <div class="dropdownShopAll">
-                                    <button class="dropbtnShopAll">Shop All &nbsp;<i
+                            <div class="mobileheader-flex">
+                                <div class="dropdownShopAll-mobile">
+                                    <button class="dropbtnShopAll-mobile">Shop All &nbsp;<i
                                             class="fa-solid fa-angle-down"></i></button>
-                                    <div class="dropdown-contentShopAll">
+                                    <div class="dropdown-contentShopAll-mobile">
                                         <a href="#">Pharmacy</a>
                                         <a href="#">Vitamins</a>
                                         <a href="#">Sun Care</a>
                                         <a href="#">Skin Care</a>
                                         <a href="#">First Aid</a>
                                     </div>
-                                </div> -->
-                                <ul class="select">
-                                    <li><a href="#">Health Equipment</a></li>
-                                    <li><a href="#">Baby</a></li>
-                                    <li><a href="#">Dental</a></li>
-                                    <li><a href="#">Diabetes</a></li>
-                                    <li><a href="#">Eye & Ear</a></li>
-                                    <li><a href="#">Incontinence</a></li>
-                                    <li><a href="#">Skin</a></li>
-                                    <li><a href="#">Sport</a></li>
-                                </ul>
+                                </div>
+                                <div class="navbar-copy-navbar">
+                                    <ul class="select">
+                                        <li><a href="#">Health Equipment</a></li>
+                                        <li><a href="#">Baby</a></li>
+                                        <li><a href="#">Dental</a></li>
+                                        <li><a href="#">Diabetes</a></li>
+                                        <li><a href="#">Eye & Ear</a></li>
+                                        <li><a href="#">Incontinence</a></li>
+                                        <li><a href="#">Skin</a></li>
+                                        <li><a href="#">Sport</a></li>
+
+                                        <span></span>
+                                    </ul>
+                                </div>
                             </div>
+
                         </div>
                     </div>
                     <div class="header-cart">
