categories section navbar

--- a/index.html
+++ b/index.html
@@ -38,53 +38,40 @@
                                             style="color: #fff;"></i></button>
                                 </form>
                             </div>
-
-                            <div class="header-call">
-                                <img src="./images/call-icon.png" alt="">
-                                <p><span> <a href="tel:0733553052">07 3355 3052 </a></span><br>Call Between 7am-8pm
-                                </p>
-                            </div>
-                            <div class="header-account">
-                                <img src="./images/accountlogo.png" alt="accountlogo">
-                                <div class="dropdown">
-                                    <button class="dropbtn">My Account <i class="fa-solid fa-angle-down"></i></button>
-                                    <div class="dropdown-content">
-                                        <ul>
-                                            <li><a href="#">Favourites</a></li>
-                                            <li> <a href="#">Wishlist</a></li>
-                                            <li> <a href="#">Log-Out</a></li>
-                                        </ul>
+                            <div class="navbarmenu">
+                                <div class="header-call">
+                                    <img src="./images/call-icon.png" alt="">
+                                    <p><span> <a href="tel:0733553052">07 3355 3052 </a></span><br>Call Between 7am-8pm
+                                    </p>
+                                </div>
+                                <div class="header-account">
+                                    <img src="./images/accountlogo.png" alt="accountlogo">
+                                    <div class="dropdown">
+                                        <button class="dropbtn">My Account <i
+                                                class="fa-solid fa-angle-down"></i></button>
+                                        <div class="dropdown-content">
+                                            <ul>
+                                                <li><a href="#">Favourites</a></li>
+                                                <li> <a href="#">Wishlist</a></li>
+                                                <li> <a href="#">Log-Out</a></li>
+                                            </ul>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
-                            <div class="mobileheader-flex">
-                                <div class="dropdownShopAll-mobile">
-                                    <button class="dropbtnShopAll-mobile">Shop All &nbsp;<i
-                                            class="fa-solid fa-angle-down"></i></button>
-                                    <div class="dropdown-contentShopAll-mobile">
-                                        <a href="#">Pharmacy</a>
-                                        <a href="#">Vitamins</a>
-                                        <a href="#">Sun Care</a>
-                                        <a href="#">Skin Care</a>
-                                        <a href="#">First Aid</a>
-                                    </div>
-                                </div>
-                                <div class="navbar-copy-navbar">
-                                    <ul class="select">
-                                        <li><a href="#">Health Equipment</a></li>
-                                        <li><a href="#">Baby</a></li>
-                                        <li><a href="#">Dental</a></li>
-                                        <li><a href="#">Diabetes</a></li>
-                                        <li><a href="#">Eye & Ear</a></li>
-                                        <li><a href="#">Incontinence</a></li>
-                                        <li><a href="#">Skin</a></li>
-                                        <li><a href="#">Sport</a></li>
-
-                                        <span></span>
-                                    </ul>
-                                </div>
+                            <h4>Categories</h4>
+                            <div class="navbar-copy-navbar">
+                                <ul>
+                                    <li><a href="#">Health Equipment</a></li>
+                                    <li><a href="#">Baby</a></li>
+                                    <li><a href="#">Dental</a></li>
+                                    <li><a href="#">Diabetes</a></li>
+                                    <li><a href="#">Eye & Ear</a></li>
+                                    <li><a href="#">Incontinence</a></li>
+                                    <li><a href="#">Skin</a></li>
+                                    <li><a href="#">Sport</a></li>
+                                </ul>
                             </div>
-
                         </div>
                     </div>
                     <div class="header-cart">
